// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DedicatedIpSummarySection renders count and zero cost 1`] = `
<Panel.LEGACY.Section
  actions={
    Array [
      Object {
        "Component": [Function],
        "color": "orange",
        "content": "Manage Your IPs",
        "to": "/account/ip-pools",
        "visible": true,
      },
      Object {
        "color": "orange",
        "content": "Add Dedicated IPs",
        "disabled": undefined,
        "onClick": [Function],
        "visible": true,
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      1
       for
       
      <DedicatedIpCost
        billingPeriodOfDedicatedIp="month"
        priceOfEachDedicatedIp={20}
        quantity={0}
      />
    </h6>
  </LabelledValue>
</Panel.LEGACY.Section>
`;

exports[`DedicatedIpSummarySection renders disabled add button, count, cost, and max plan notice 1`] = `
<Panel.LEGACY.Section
  actions={
    Array [
      Object {
        "Component": [Function],
        "color": "orange",
        "content": "Manage Your IPs",
        "to": "/account/ip-pools",
        "visible": true,
      },
      Object {
        "color": "orange",
        "content": "Add Dedicated IPs",
        "disabled": true,
        "onClick": [Function],
        "visible": true,
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      4
       for
       
      <DedicatedIpCost
        billingPeriodOfDedicatedIp="month"
        priceOfEachDedicatedIp={20}
        quantity={4}
      />
    </h6>
    <p>
      You have reached the maximum allowed.
    </p>
  </LabelledValue>
</Panel.LEGACY.Section>
`;

exports[`DedicatedIpSummarySection renders upgrade button and zero count 1`] = `
<Panel.LEGACY.Section
  actions={
    Array [
      Object {
        "Component": [Function],
        "color": "orange",
        "content": "Upgrade Now",
        "to": "/account/billing/plan",
        "visible": true,
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      0
    </h6>
  </LabelledValue>
</Panel.LEGACY.Section>
`;

exports[`DedicatedIpSummarySection renders zero count and first is free notice 1`] = `
<Panel.LEGACY.Section
  actions={
    Array [
      Object {
        "color": "orange",
        "content": "Add Dedicated IPs",
        "disabled": undefined,
        "onClick": [Function],
        "visible": true,
      },
    ]
  }
>
  <LabelledValue
    label="Dedicated IPs"
  >
    <h6>
      0
    </h6>
  </LabelledValue>
</Panel.LEGACY.Section>
`;
